--- a/WpfApp3/UserWindow.xaml
+++ b/WpfApp3/UserWindow.xaml
@@ -5,7 +5,19 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp3"
         mc:Ignorable="d"
-        Title="UserWindow" Height="400" Width="400">
+        Title="Найм сотрудника" Height="400" Width="400" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Background="#FF0D1117" Foreground="#FFEEEDED" OpacityMask="Black">
+    <Window.Resources>
+        <Style TargetType="TextBlock">
+            <Setter Property="Margin" Value="8" />
+        </Style>
+        <Style TargetType="TextBox">
+            <Setter Property="Margin" Value="8" />
+        </Style>
+        <Style TargetType="Button">
+            <Setter Property="MinWidth" Value="60" />
+            <Setter Property="Margin" Value="8" />
+        </Style>
+    </Window.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition />
@@ -21,26 +33,26 @@
             <ColumnDefinition Width="100" />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <TextBlock Text="ID работника" />
-        <TextBlock Text="Фамилия" Grid.Row="1" />
-        <TextBlock Text="Имя" Grid.Row="2" />
-        <TextBlock Text="Отчество" Grid.Row="3"/>
-        <TextBlock Text="Дата рождения" Grid.Row="4" />
-        <TextBlock Text="Телефон" Grid.Row="5" />
-        <TextBlock Text="Отдел" Grid.Row="6" />
+        <TextBlock Text="ID работника" VerticalAlignment="Center" />
+        <TextBlock Text="Фамилия" Grid.Row="1" VerticalAlignment="Center" />
+        <TextBlock Text="Имя" Grid.Row="2" VerticalAlignment="Center" />
+        <TextBlock Text="Отчество" Grid.Row="3" VerticalAlignment="Center"/>
+        <TextBlock Text="Дата рождения" Grid.Row="4" VerticalAlignment="Center" />
+        <TextBlock Text="Телефон" Grid.Row="5" VerticalAlignment="Center" />
+        <TextBlock Text="Отдел" Grid.Row="6" VerticalAlignment="Center" />
 
-        <TextBox Text="{Binding Id_pers}" Grid.Column="1" />
-        <TextBox Text="{Binding Surname}" Grid.Column="1" Grid.Row="1" />
-        <TextBox Text="{Binding Name}" Grid.Column="1" Grid.Row="2" />
-        <TextBox Text="{Binding Patronymic}" Grid.Column="1" Grid.Row="3" />
-        <TextBox Text="{Binding Date_of_Birth}" Grid.Column="1" Grid.Row="4" />
-        <TextBox Text="{Binding Phone}" Grid.Column="1" Grid.Row="5" />
-        <TextBox Text="{Binding Department}" Grid.Column="1" Grid.Row="6" />
+        <TextBox Text="{Binding Id_pers}" Grid.Column="1" VerticalContentAlignment="Center"/>
+        <TextBox Text="{Binding Surname}" Grid.Column="1" Grid.Row="1" VerticalContentAlignment="Center"/>
+        <TextBox Text="{Binding Name}" Grid.Column="1" Grid.Row="2" VerticalContentAlignment="Center"/>
+        <TextBox Text="{Binding Patronymic}" Grid.Column="1" Grid.Row="3" VerticalContentAlignment="Center"/>
+        <TextBox Text="{Binding Date_of_Birth}" Grid.Column="1" Grid.Row="4" VerticalContentAlignment="Center"/>
+        <TextBox Text="{Binding Phone}" Grid.Column="1" Grid.Row="5" VerticalContentAlignment="Center"/>
+        <TextBox Text="{Binding Department}" Grid.Column="1" Grid.Row="6" VerticalContentAlignment="Center"/>
 
 
         <StackPanel HorizontalAlignment="Center" Orientation="Horizontal" Grid.Row="7" Grid.Column="1">
-            <Button IsDefault="True" Click="Accept_Click" >OK</Button>
-            <Button IsCancel="True" >Отмена</Button>
+            <Button IsDefault="True" Click="Accept_Click" Background="#FF0D1117" Foreground="White"  BorderBrush="#FF13EB08">OK</Button>
+            <Button IsCancel="True" Background="#FF0D1117" Foreground="White" BorderBrush="#FFEB0808">Отмена</Button>
         </StackPanel>
     </Grid>
 </Window>
