--- a/WpfApp3/MainWindow.xaml
+++ b/WpfApp3/MainWindow.xaml
@@ -4,34 +4,30 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp3"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+        mc:Ignorable="d" Height="450" Width="800" WindowStartupLocation="CenterScreen" Title="Нанятый персонал">
+    <Grid Background="#FF0D1117">
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition Height="50" />
         </Grid.RowDefinitions>
-        <ListBox x:Name="usersList" ItemsSource="{Binding}">
+        <ListBox x:Name="usersList" ItemsSource="{Binding}" Background="#FF0D1117" Foreground="White" BorderBrush="#FF0D1117">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
-                        <TextBlock Text="{Binding Id_pers}" FontSize="13" />
-                        <TextBlock Text="{Binding Name}" FontSize="13" />
-                        <TextBlock Text="{Binding Surname}" FontSize="13" />
-                        <TextBlock Text="{Binding Patronymic}" FontSize="13" />
-                        <TextBlock Text="{Binding Date_of_Birth}" FontSize="13" />
-                        <TextBlock Text="{Binding Phone}" FontSize="13" />
-                        <TextBlock Text="{Binding Department}" FontSize="13" />
-                       
+                        <TextBlock>
+                            <Run Text="{Binding Surname}" FontSize="16"/>
+                            <Run Text="{Binding Name}" FontSize="16"/>
+                            <Run Text="{Binding Patronymic}" FontSize="16"/>
+                        </TextBlock>
                     </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button Content="Добавить" Margin="10" Click="Add_Click" />
-            <Button Content="Изменить" Margin="10" Click="Edit_Click"  />
-            <Button Content="Подробнее" Margin="10" Click="Info_Click" />
-            <Button Content="Удалить" Margin="10" Click="Delete_Click"  />
+            <Button Content="Нанять" Margin="10" Click="Add_Click" Background="#FF0D1117" Foreground="White" BorderBrush="#FF13EB08"/>
+            <Button Content="Изменить" Margin="10" Click="Edit_Click"  Background="#FF0D1117" Foreground="White" BorderBrush="#FF08EBEB"/>
+            <Button Content="Подробнее" Margin="10" Click="Info_Click" Background="#FF0D1117" Foreground="White" BorderBrush="#FF08EBEB"/>
+            <Button Content="Уволить" Margin="10" Click="Delete_Click"  Background="#FF0D1117" Foreground="White" BorderBrush="#FFEB0808"/>
         </StackPanel>
     </Grid>
 </Window>
