--- a/WpfApp3/MainWindow.xaml
+++ b/WpfApp3/MainWindow.xaml
@@ -26,6 +26,7 @@
         <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
             <Button Content="Нанять" Margin="10" Click="Add_Click" Background="#FF0D1117" Foreground="White" BorderBrush="#FF13EB08"/>
             <Button Content="Изменить" Margin="10" Click="Edit_Click"  Background="#FF0D1117" Foreground="White" BorderBrush="#FF08EBEB"/>
+            <Button Content="Сохранить" Margin="10"  Background="#FF0D1117" Foreground="White" BorderBrush="#FF08EBEB" Click="Save_Click"/>
             <Button Content="Подробнее" Margin="10" Click="Info_Click" Background="#FF0D1117" Foreground="White" BorderBrush="#FF08EBEB"/>
             <Button Content="Уволить" Margin="10" Click="Delete_Click"  Background="#FF0D1117" Foreground="White" BorderBrush="#FFEB0808"/>
         </StackPanel>
