--- a/WpfApp3/MainWindow.xaml
+++ b/WpfApp3/MainWindow.xaml
@@ -4,13 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp3"
-        mc:Ignorable="d" Height="450" Width="800" WindowStartupLocation="CenterScreen" Title="Нанятый персонал">
+        mc:Ignorable="d" Height="450" Width="810" WindowStartupLocation="CenterScreen" Title="Нанятый персонал">
     <Grid Background="#FF0D1117">
-        <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition Height="50" />
-        </Grid.RowDefinitions>
-        <ListBox x:Name="employeeList" ItemsSource="{Binding}" Background="#FF0D1117" Foreground="White" BorderBrush="#FF0D1117">
+        <ListBox x:Name="employeeList" ItemsSource="{Binding}" Background="#FF0D1117" Foreground="White" BorderBrush="#FF0D1117" Margin="10,10,170,10">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
@@ -23,12 +19,13 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        <StackPanel Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center">
-            <Button Content="Нанять" Margin="10" Click="Add_Click" Background="#FF0D1117" Foreground="White" BorderBrush="#FF13EB08"/>
-            <Button Content="Изменить" Margin="10" Click="Edit_Click"  Background="#FF0D1117" Foreground="White" BorderBrush="#FF08EBEB"/>
-            <Button Content="Сохранить" Margin="10"  Background="#FF0D1117" Foreground="White" BorderBrush="#FF08EBEB" Click="Save_Click"/>
-            <Button Content="Подробнее" Margin="10" Click="Info_Click" Background="#FF0D1117" Foreground="White" BorderBrush="#FF08EBEB"/>
-            <Button Content="Уволить" Margin="10" Click="Delete_Click"  Background="#FF0D1117" Foreground="White" BorderBrush="#FFEB0808"/>
+        <StackPanel Orientation="Vertical" Margin="644,10,10,10" Width="145" HorizontalAlignment="Right" Background="#FF131922">
+            <Button Content="Нанять" Margin="15,10,15,10" Click="Add_Click" Background="#FF0D1117" Foreground="White" BorderBrush="#FF13EB08"/>
+            <Button Content="Изменить" Margin="15,10,15,10" Click="Edit_Click"  Background="#FF0D1117" Foreground="White" BorderBrush="#FF08EBEB"/>
+            <Button Content="Подробнее" Margin="15,10,15,10" Click="Info_Click" Background="#FF0D1117" Foreground="White" BorderBrush="#FF08EBEB"/>
+            <Button Content="Уволить" Margin="15,10,15,10" Click="Delete_Click"  Background="#FF0D1117" Foreground="White" BorderBrush="#FFEB0808"/>
+            <Button Content="Сохранить JSON" Margin="15,10,15,10"  Background="#FF0D1117" Foreground="White" BorderBrush="#FFA708EB" Click="JSON_Click" VerticalAlignment="Bottom"/>
+            <Button Content="Сохранить Excel" Margin="15,10,15,10" Background="#FF0D1117" Foreground="White" BorderBrush="#FFA708EB" Click="Excel_Click" VerticalAlignment="Bottom"/>
         </StackPanel>
     </Grid>
 </Window>
