--- a/WpfApp3/MainWindow.xaml
+++ b/WpfApp3/MainWindow.xaml
@@ -20,6 +20,7 @@
             </ListBox.ItemTemplate>
         </ListBox>
         <StackPanel Orientation="Vertical" Margin="644,10,10,10" Width="145" HorizontalAlignment="Right" Background="#FF131922">
+            <TextBox x:Name="Search" Height="21" TextWrapping="Wrap" Text="TextBox" Width="114" Margin="0,10,0,10" TextChanged="Search_TextChanged"/>
             <Button Content="Нанять" Margin="15,10,15,10" Click="Add_Click" Background="#FF0D1117" Foreground="White" BorderBrush="#FF13EB08"/>
             <Button Content="Изменить" Margin="15,10,15,10" Click="Edit_Click"  Background="#FF0D1117" Foreground="White" BorderBrush="#FF08EBEB"/>
             <Button Content="Подробнее" Margin="15,10,15,10" Click="Info_Click" Background="#FF0D1117" Foreground="White" BorderBrush="#FF08EBEB"/>
