--- a/WpfApp3/MainWindow.xaml
+++ b/WpfApp3/MainWindow.xaml
@@ -4,9 +4,10 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp3"
-        mc:Ignorable="d" Height="450" Width="810" WindowStartupLocation="CenterScreen" Title="Нанятый персонал">
+        WindowState="Maximized"
+        mc:Ignorable="d" Height="450" Width="810" WindowStartupLocation="CenterScreen" Title="Приёмная комиссия">
     <Grid>
-        <ListBox x:Name="employeeList" ItemsSource="{Binding}" Margin="10,10,170,10">
+        <ListBox x:Name="employeeList" ItemsSource="{Binding}" Margin="10,30,170,10">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
@@ -19,12 +20,19 @@
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
-        <StackPanel Orientation="Vertical" Margin="644,10,10,10" Width="145" Background="#fff" HorizontalAlignment="Right">
-            <Button Content="Нанять" Margin="15,10,15,10" Click="Add_Click" BorderBrush="#FF13EB08"/>
-            <Button Content="Изменить" Margin="15,10,15,10" Click="Edit_Click" BorderBrush="#FF08EBEB"/>
-            <Button Content="Подробнее" Margin="15,10,15,10" Click="Info_Click" BorderBrush="#FF08EBEB"/>
-            <Button Content="Уволить" Margin="15,10,15,10" Click="Delete_Click"  BorderBrush="#FFEB0808"/>
-            <Button Content="Сохранить Excel" Margin="15,10,15,10" BorderBrush="#FFA708EB" Click="Excel_Click" VerticalAlignment="Bottom"/>
+        <StackPanel Orientation="Vertical" Margin="0,30,10,10" Width="155" Background="#fff" HorizontalAlignment="Right">
+            <Button Content="Добавить" Margin="15,10,15,10" Click="Add_Click" BorderBrush="#000"/>
+            <Button Content="Изменить" Margin="15,10,15,10" Click="Edit_Click" BorderBrush="#000"/>
+            <Button Content="Подробнее" Margin="15,10,15,10" Click="Info_Click" BorderBrush="#000"/>
+            <Button Content="Удалить" Margin="15,10,15,10" Click="Delete_Click"  BorderBrush="#000"/>
         </StackPanel>
+        <Menu Height="25" Margin="10, 0, 10, 0" VerticalAlignment="Top">
+            <MenuItem Header="Сохранить как" Height="25" Background="#fff" BorderThickness="2">
+                <MenuItem Header="Excel" Click="Excel_Click" ></MenuItem>
+                <MenuItem Header="Word" ></MenuItem>
+            </MenuItem>
+            <TextBox x:Name="poiskfield" TextWrapping="Wrap" Width="320" Height="19" BorderBrush="#FF7D98E8"/>
+
+        </Menu>
     </Grid>
 </Window>
